--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Link Training</title>
 </head>
 <body>
-    <h1 style="text-align: center">Homepage</h1>
-    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
-
-
-</body>
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener norefferer">About The Odin Project</a>
+  
+    <a href="./Pages/about.html">About</a>
+  </body>
 </html>
