--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener norefferer">About The Odin Project</a>
   
     <a href="./Pages/about.html">About</a>
+
+    <img Src="../images/dog.jpg" alt="odin-project-lins-and-images-project." hieght="310"width="310">
   </body>
 </html>
